tests/errors/func_miss_name.joyeer

func (): Int {
    return 0
}

